log
Tue, May 13, 2025 12:34:11 PM: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Tue, May 13, 2025 12:38:42 PM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
bab6cd7
Tue, May 13, 2025 12:49:09 PM: 
 sudoku.c | 36 +++++++++++++++++++++++++++++++++++-
 1 file changed, 35 insertions(+), 1 deletion(-)
 tests:  4|4
total_score: 25/70
54cacf9
Tue, May 13, 2025 12:51:16 PM: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  4|4
total_score: 25/70
79e6d74
Tue, May 13, 2025 12:57:11 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
78e8a82
Tue, May 13, 2025  1:04:30 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
4ab7b72
Tue, May 13, 2025  1:17:13 PM: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
18a20d5
